--- a/style.css
+++ b/style.css
@@ -1,6 +1,13 @@
 body{
     width: 100vmin;
     margin: 0;
-    padding: 20px 10px;
+    padding: 20px 0px;
     box-sizing: border-box;
+}
+body > header{
+    padding: 0 20px;
+    margin-bottom: 20px;
+}
+body > header > img{
+    width: 5rem;
 }
