--- a/style.css
+++ b/style.css
@@ -1,13 +1,42 @@
 body{
-    width: 100vmin;
+    width: 100vw;
     margin: 0;
-    padding: 20px 0px;
+    padding: 40px 0px;
+    display: flex;
+    flex-direction: column;
     box-sizing: border-box;
+
 }
 body > header{
-    padding: 0 20px;
-    margin-bottom: 20px;
+    padding: 0 40px;
+    margin-bottom: 40px;
+    position: relative;
 }
 body > header > img{
-    width: 5rem;
+    width: 10rem;
+}
+
+body > main{
+    position: relative;
+    max-width: inherit;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    color: rgb(239, 115, 228);
+}
+body > main > img{
+    width: 100%;
+}
+body > main > section > header {
+    font-size: 4rem;
+    text-transform: uppercase;
+    letter-spacing: 10px;
+    
+}
+span{
+    display: block;
+}
+
+#coming{
+    color: rgb(119, 150, 153);
 }
