--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ span{
 }
 .email-box input{
     border: none;
-    background: transparent
+    background: transparent;
 }
 main > section{
     padding: 0 30px;
